# FoX

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
fox/: CMakeLists.txt  game.cpp  game.h  main.cpp
fox/components/: component_system.h  drawable.cpp  drawable.h  idler.cpp  idler.h  transform.h
fox/gui/: idle_box.cpp  idle_box.h
fox/model/: duration_info.h
include/: other_writer.h  writer.h
